Adição das rotas bonus e corrigindo erros apontados pelo Autograder
