# routes/casosRoutes.js
@@ -3,11 +3,13 @@ const router = express.Router();
 
 const casosController = require('../controllers/casosController');
 
+router.get("/casos/search", casosController.getCasosPorString)
 router.get('/casos', casosController.getAllCasos)
 router.get('/casos/:id', casosController.getCaso)
 router.post('/casos', casosController.postCaso)
 router.put('/casos/:id', casosController.putCaso)
 router.patch('/casos/:id', casosController.patchCaso)
 router.delete('/casos/:id', casosController.deleteCaso)
+router.get("/casos/:casos_id/agente", casosController.getAgenteDoCaso)
 
 module.exports = router
